--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.1.1",
+    "@mui/material": "^7.3.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.6",
     "lucide-react": "^0.344.0",
